--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,6 +17,7 @@
     }
   ],
   "dependencies": {
+  "com.unity.webrtc":"2.3.1-preview",
     "com.domybest.mybox": "1.5.1",
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.render-pipelines.universal": "10.2.2",
