Implement lots of network stuff

--- a/Assets/Scripts/YourNutz.asmdef
+++ b/Assets/Scripts/YourNutz.asmdef
@@ -2,7 +2,8 @@
     "name": "YourNutz",
     "rootNamespace": "",
     "references": [
-        "Unity.WebRTC"
+        "Unity.WebRTC",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
