--- a/Assets/Scripts/YourNutz.asmdef
+++ b/Assets/Scripts/YourNutz.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Unity.WebRTC",
         "Unity.InputSystem",
-        "Cinemachine"
+        "Cinemachine",
+        "Slothsoft.UnityExtensions.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
