--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,18 +17,19 @@
     }
   ],
   "dependencies": {
-    "com.domybest.mybox": "1.5.1",
-    "com.unity.cinemachine": "2.6.3",
-    "com.unity.ide.visualstudio": "2.0.5",
+    "com.domybest.mybox": "1.7.0",
+    "com.unity.cinemachine": "2.6.5",
+    "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.inputsystem": "1.0.2",
-    "com.unity.recorder": "2.5.2",
-    "com.unity.render-pipelines.universal": "10.2.2",
-    "com.unity.test-framework": "1.1.22",
-    "com.unity.textmeshpro": "3.0.3",
-    "com.unity.timeline": "1.4.6",
+    "com.unity.recorder": "2.5.5",
+    "com.unity.render-pipelines.universal": "10.5.0",
+    "com.unity.test-framework": "1.1.27",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "10.2.2",
-    "net.slothsoft.unity-extensions": "1.0.0",
+    "com.unity.visualeffectgraph": "10.5.0",
+    "com.unity.webrtc": "2.4.0-exp.3",
+    "net.slothsoft.unity-extensions": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
