--- a/Assets/Scripts/NuttinToLose.asmdef
+++ b/Assets/Scripts/NuttinToLose.asmdef
@@ -5,7 +5,8 @@
         "Unity.InputSystem",
         "Cinemachine",
         "Slothsoft.UnityExtensions.Runtime",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.WebRTC"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
