Make code WebGL-compilable

--- a/Assets/Samples/WebRTC/2.4.0-exp.3/Example/Unity.WebRTC.Samples.asmdef
+++ b/Assets/Samples/WebRTC/2.4.0-exp.3/Example/Unity.WebRTC.Samples.asmdef
@@ -4,7 +4,14 @@
         "Unity.WebRTC"
     ],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Android",
+        "Editor",
+        "iOS",
+        "LinuxStandalone64",
+        "macOSStandalone",
+        "WindowsStandalone64"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
