--- a/.editorconfig
+++ b/.editorconfig
@@ -245,20 +245,33 @@ dotnet_naming_style.capslock.word_separator =
 dotnet_naming_style.capslock.capitalization = all_upper
 
 # Unity Tools https://github.com/microsoft/Microsoft.Unity.Analyzers/blob/master/doc/index.md
-dotnet_diagnostic.UNT0001.severity = none		# UNT0001 Empty Unity message
-dotnet_diagnostic.UNT0002.severity = warning	# UNT0002 Inefficient tag comparison
-dotnet_diagnostic.UNT0003.severity = warning	# UNT0003 Usage of non generic GetComponent
-dotnet_diagnostic.UNT0004.severity = warning	# UNT0004 Time.fixedDeltaTime used with Update
-dotnet_diagnostic.UNT0005.severity = none		# UNT0005 Time.deltaTime used with FixedUpdate
-dotnet_diagnostic.UNT0006.severity = warning	# UNT0006 Incorrect message signature
-dotnet_diagnostic.UNT0007.severity = warning	# UNT0007 Null coalescing on Unity objects 
-dotnet_diagnostic.UNT0008.severity = warning	# UNT0008 Null propagation on Unity objects
-dotnet_diagnostic.UNT0009.severity = warning	# UNT0009 Missing static constructor with InitializeOnLoad
-dotnet_diagnostic.UNT0010.severity = warning	# UNT0010 MonoBehaviour instance creation
-dotnet_diagnostic.UNT0011.severity = warning	# UNT0011 ScriptableObject instance creation
+dotnet_diagnostic.UNT0001.severity = none		# Empty Unity message
+dotnet_diagnostic.UNT0002.severity = warning	# Inefficient tag comparison
+dotnet_diagnostic.UNT0003.severity = warning	# Usage of non generic GetComponent
+dotnet_diagnostic.UNT0004.severity = warning	# Time.fixedDeltaTime used with Update
+dotnet_diagnostic.UNT0005.severity = none		# Time.deltaTime used with FixedUpdate
+dotnet_diagnostic.UNT0006.severity = warning	# Incorrect message signature
+dotnet_diagnostic.UNT0007.severity = warning	# Null coalescing on Unity objects 
+dotnet_diagnostic.UNT0008.severity = warning	# Null propagation on Unity objects
+dotnet_diagnostic.UNT0009.severity = warning	# Missing static constructor with InitializeOnLoad
+dotnet_diagnostic.UNT0010.severity = warning	# MonoBehaviour instance creation
+dotnet_diagnostic.UNT0011.severity = warning	# ScriptableObject instance creation
+dotnet_diagnostic.UNT0012.severity = warning	# Unused coroutine return value
+dotnet_diagnostic.UNT0013.severity = none		# Invalid or redundant SerializeField attribute
+dotnet_diagnostic.UNT0014.severity = warning	# GetComponent called with non-Component or non-Interface type
+dotnet_diagnostic.UNT0015.severity = warning	# Incorrect method signature with InitializeOnLoadMethod or RuntimeInitializeOnLoadMethod attribute
+dotnet_diagnostic.UNT0016.severity = warning	# Unsafe way to get the method name
+dotnet_diagnostic.UNT0017.severity = none		# SetPixels invocation is slow
+dotnet_diagnostic.UNT0018.severity = warning	# System.Reflection features in performance critical messages
+dotnet_diagnostic.UNT0019.severity = warning	# Unnecessary indirection call for GameObject.gameObject
+dotnet_diagnostic.UNT0020.severity = warning	# MenuItem attribute used on non-static method
+dotnet_diagnostic.UNT0021.severity = warning	# Unity message should be protected [opt-in]
+dotnet_diagnostic.UNT0022.severity = warning	# Inefficient method to set position and rotation
+dotnet_diagnostic.UNT0023.severity = warning	# Coalescing assignment on Unity objects
+dotnet_diagnostic.UNT0024.severity = warning	# Give priority to scalar calculations over vector calculations
+dotnet_diagnostic.UNT0025.severity = warning	# Input.GetKey overloads with KeyCode argument
 
 # @UNT0004+UNT0005: https://docs.unity3d.com/ScriptReference/Time-fixedDeltaTime.html
 # @UNT0007+UNT0008: https://stackoverflow.com/questions/58487442/why-does-resharper-not-suggest-using-null-propagation-for-both-of-these-blocks
 
 # Visual Studio Diagnostics
-dotnet_diagnostic.IDE0051.severity = none		# IDE0051 unused stuff
