--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -23,13 +23,13 @@
     "com.unity.inputsystem": "1.4.4",
     "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "12.1.8",
-    "com.unity.test-framework": "1.1.33",
+    "com.unity.test-framework": "2.0.1-exp.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "12.1.8",
-    "com.unity.webrtc": "2.4.0-exp.11",
-    "net.slothsoft.unity-extensions": "2.1.2",
+    "com.unity.webrtc": "3.0.0-pre.3",
+    "net.slothsoft.unity-extensions": "2.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
