--- a/Assets/Scripts/NuttinToLose.asmdef
+++ b/Assets/Scripts/NuttinToLose.asmdef
@@ -6,7 +6,8 @@
         "Cinemachine",
         "Unity.TextMeshPro",
         "Unity.WebRTC",
-        "Slothsoft.UnityExtensions"
+        "Slothsoft.UnityExtensions",
+        "MyBox"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
