--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,35 +1,9 @@
 {
-  "scopedRegistries": [
-    {
-      "name": "npmjs",
-      "url": "https://registry.npmjs.org",
-      "scopes": [
-        "com.unity.uiextensions"
-      ]
-    },
-    {
-      "name": "OpenUPM",
-      "url": "https://package.openupm.com",
-      "scopes": [
-        "com.domybest.mybox",
-        "net.slothsoft.unity-extensions"
-      ]
-    }
-  ],
   "dependencies": {
     "com.domybest.mybox": "1.7.0",
     "com.unity.cinemachine": "2.9.1",
-    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.4.4",
-    "com.unity.recorder": "3.0.3",
-    "com.unity.render-pipelines.universal": "12.1.8",
-    "com.unity.test-framework": "2.0.1-exp.2",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "12.1.8",
-    "com.unity.webrtc": "3.0.0-pre.4",
-    "net.slothsoft.unity-extensions": "2.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -60,6 +34,34 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
-  }
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.recorder": "3.0.3",
+    "com.unity.render-pipelines.universal": "12.1.8",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.6.4",
+    "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "12.1.8",
+    "com.unity.webrtc": "3.0.0-pre.4",
+    "net.slothsoft.unity-extensions": "3.1.0"
+  },
+  "scopedRegistries": [
+    {
+      "name": "OpenUPM",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.domybest.mybox",
+        "net.slothsoft.unity-extensions",
+        "com.inkle.ink-unity-integration",
+        "nl.jeffreylanters.tweens",
+        "net.tnrd.nsubstitute"
+      ]
+    },
+    {
+      "name": "Unity NuGet",
+      "url": "https://unitynuget-registry.azurewebsites.net",
+      "scopes": [
+        "org.nuget"
+      ]
+    }
+  ]
 }
